--- a/DungeonsAndNotes/AppShell.xaml
+++ b/DungeonsAndNotes/AppShell.xaml
@@ -3,18 +3,18 @@
     x:Class="DungeonsAndNotes.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:DungeonsAndNotes"
+    xmlns:views="clr-namespace:DungeonsAndNotes.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <TabBar>
         <ShellContent
             Title="Notes"
-            ContentTemplate="{DataTemplate local:MainPage}"
+            ContentTemplate="{DataTemplate views:AllNotesPage}"
             Icon="icon_notes" />
         
         <ShellContent
             Title="About"
-            ContentTemplate="{DataTemplate local:About}"
+            ContentTemplate="{DataTemplate views:About}"
             Icon="icon_about" />
     </TabBar>
 
