--- a/DungeonsAndNotes/Views/About.xaml
+++ b/DungeonsAndNotes/Views/About.xaml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DungeonsAndNotes.About"
+             xmlns:models="clr-namespace:DungeonsAndNotes.Models"
+             x:Class="DungeonsAndNotes.Views.About"
              Title="About">
-    
+    <ContentPage.BindingContext>
+        <models:About />
+    </ContentPage.BindingContext>
     <VerticalStackLayout Spacing="10" Margin="10">
         <HorizontalStackLayout>
             <Label 
                 FontSize="22" 
                 FontAttributes="Bold" 
-                Text="Notes" 
+                Text="{Binding Title}" 
                 VerticalOptions="End" />
             <Label 
                 FontSize="22" 
-                Text="1.0" 
+                Text="{Binding Version}" 
                 VerticalOptions="End" />
         </HorizontalStackLayout>
         <Label 
@@ -21,7 +24,7 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         <Button
-            Text="Learn More..."
+            Text="{Binding Message}"
             Clicked="LearnMore_Clicked" />
     </VerticalStackLayout>
 </ContentPage>
